--- a/Modulo02CSS3/Exercícios/Ex022/fundo006.html
+++ b/Modulo02CSS3/Exercícios/Ex022/fundo006.html
@@ -7,11 +7,19 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
-            background-size: 100%;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* shorthhand - background
+                color > imagem > position > repeat >[size]
+                > attachment*/
+
+                background: black url('imagens/wallpaper002.jpg') center no-repeat  fixed ;
+                background-size: cover;
         }
 
         main {
@@ -21,7 +29,7 @@
             margin: auto;
             border: 1px solid darkblue; 
             border-radius: 15px;
-            background-position: cover;
+            
 
         }
     </style>
@@ -29,6 +37,10 @@
 <body>
     <main>
     <h1>Teste de Imagem de Fundo</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos delectus praesentium autem nobis nam, eum facilis maiores, at itaque tenetur quo aut natus accusantium! Possimus quibusdam amet delectus mollitia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio eaque odit, cumque voluptate ex eum voluptas eveniet est architecto cum perspiciatis dolore enim ducimus. Facilis a aliquid repellendus similique?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita inventore blanditiis ullam commodi enim quibusdam natus labore eligendi nihil, esse perferendis id cumque fuga velit, voluptas quasi itaque consequatur?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos delectus praesentium autem nobis nam, eum facilis maiores, at itaque tenetur quo aut natus accusantium! Possimus quibusdam amet delectus mollitia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio eaque odit, cumque voluptate ex eum voluptas eveniet est architecto cum perspiciatis dolore enim ducimus. Facilis a aliquid repellendus similique?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita inventore blanditiis ullam commodi enim quibusdam natus labore eligendi nihil, esse perferendis id cumque fuga velit, voluptas quasi itaque consequatur?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos delectus praesentium autem nobis nam, eum facilis maiores, at itaque tenetur quo aut natus accusantium! Possimus quibusdam amet delectus mollitia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio eaque odit, cumque voluptate ex eum voluptas eveniet est architecto cum perspiciatis dolore enim ducimus. Facilis a aliquid repellendus similique?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita inventore blanditiis ullam commodi enim quibusdam natus labore eligendi nihil, esse perferendis id cumque fuga velit, voluptas quasi itaque consequatur?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos delectus praesentium autem nobis nam, eum facilis maiores, at itaque tenetur quo aut natus accusantium! Possimus quibusdam amet delectus mollitia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio eaque odit, cumque voluptate ex eum voluptas eveniet est architecto cum perspiciatis dolore enim ducimus. Facilis a aliquid repellendus similique?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita inventore blanditiis ullam commodi enim quibusdam natus labore eligendi nihil, esse perferendis id cumque fuga velit, voluptas quasi itaque consequatur?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dignissimos delectus praesentium autem nobis nam, eum facilis maiores, at itaque tenetur quo aut natus accusantium! Possimus quibusdam amet delectus mollitia?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio eaque odit, cumque voluptate ex eum voluptas eveniet est architecto cum perspiciatis dolore enim ducimus. Facilis a aliquid repellendus similique?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita inventore blanditiis ullam commodi enim quibusdam natus labore eligendi nihil, esse perferendis id cumque fuga velit, voluptas quasi itaque consequatur?</p>
 </main>
 </body>
