Atualização de tabelas

--- a/Modulo02CSS3/Exercícios/Ex023/tabela 002.html
+++ b/Modulo02CSS3/Exercícios/Ex023/tabela 002.html
@@ -52,7 +52,7 @@
             padding: 5px;
             background-color: beige;
         }
-        tbody > tr:nth-child(2n) {
+        tbody {
             background-color: lightgoldenrodyellow;
         } 
     </style>
