--- a/Modulo02CSS3/Exercícios/Ex023/tabela_completa.html
+++ b/Modulo02CSS3/Exercícios/Ex023/tabela_completa.html
@@ -94,7 +94,7 @@
         </tr>
         <tr>
             <td class="coluna" rowspan="3">Homens</td>
-            <td class="coluna">Bruno Mendonça</td>
+            <td class="coluna">José Amaro</td>
             <td class="coluna">Intocáveis</td>
             <td class="coluna">Amnésia</td>
             <td class="coluna">Gladiador</td>
