--- a/Modulo02CSS3/Exercícios/Ex023/tabela_completa.html
+++ b/Modulo02CSS3/Exercícios/Ex023/tabela_completa.html
@@ -63,9 +63,11 @@
 
     <table>
         <tr>
-            <td class="negrito">Grupo</td>
-            <td class="negrito">Nomes</td>
-            <td class="negrito" colspan="3">Filmes</td>
+            <td scope="col" class="negrito">Área</td>
+            <td scope="col" class="negrito">Exatas</td>
+            <td scope="col" class="negrito">Média de Exames</td>
+            <td scope="col" class="negrito">Humanas</td>
+            <td scope="col" class="negrito">Exatas</td>
             
         </tr>
 
