--- a/Modulo_04/Exercicios/Ex024/iframe002.html
+++ b/Modulo_04/Exercicios/Ex024/iframe002.html
@@ -26,7 +26,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore vel ducimus odit, exercitationem omnis unde illo reiciendis, pariatur iusto aperiam quae non eveniet itaque et corrupti deserunt a, earum in!
     </p>
 
-    <iframe src="https://amarodev.github.io/projeto-cordel/" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="Paginas_extras/tabela_completa.html" frameborder="0" height="500" width="500"></iframe>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo impedit quae nihil vitae sed iste, sunt quis unde repudiandae eveniet quisquam minima, repellendus cupiditate quod quasi nesciunt veniam tempore porro!
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore vel ducimus odit, exercitationem omnis unde illo reiciendis, pariatur iusto aperiam quae non eveniet itaque et corrupti deserunt a, earum in!
