--- a/Modulo_04/Exercicios/Ex025/form002.html
+++ b/Modulo_04/Exercicios/Ex025/form002.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="Cadastro.php" method="get">
+    <form action="Cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iusu">Usuário:</label>
-            <input type="text" name="usu" id="iusu">
+            <input type="text" name="usu" id="iusu" required minlength="6" maxlength="30" size="25" placeholder="Nome Usuário" autocomplete="username">
         </p>
         <p>
             <label for="isen">Senha:</label>
-            <input type="password" name="sen" id="isen">
+            <input type="password" name="sen" id="isen" required minlength="6" size="10" placeholder="Máx. 6 Dígitos" autocomplete="current-password">
         </p>
 
         <p>
