--- a/Modulo_04/Exercicios/Ex026/mq001/index.html
+++ b/Modulo_04/Exercicios/Ex026/mq001/index.html
@@ -25,9 +25,9 @@
             <h2>Estou aprendendo a criar Media Queries</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe debitis delectus totam voluptates porro, laborum illo inventore, voluptas minima rerum eligendi architecto animi quas minus ratione deleniti non eaque maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat consequuntur sapiente dolorem libero sunt suscipit deserunt nihil, repudiandae unde quia! Repellat natus ea unde! Repudiandae veritatis nam molestiae quas? Aspernatur!</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe debitis delectus totam voluptates porro, laborum illo inventore, voluptas minima rerum eligendi architecto animi quas minus ratione deleniti non eaque maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat consequuntur sapiente dolorem libero sunt suscipit deserunt nihil, repudiandae unde quia! Repellat natus ea unde! Repudiandae veritatis nam molestiae quas? Aspernatur!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe debitis delectus totam voluptates porro, laborum illo inventore, voluptas minima rerum eligendi architecto animi quas minus ratione deleniti non eaque maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. !</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe debitis delectus totam voluptates porro, laborum illo inventore, voluptas minima rerum eligendi architecto animi quas minus ratione deleniti non eaque maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat consequuntur sapiente dolorem libero sunt suscipit deserunt nihil, repudiandae unde quia! Repellat natus ea unde! Repudiandae veritatis nam molestiae quas? Aspernatur!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe debitis delectus totam voluptates porro, laborum illo inventore, voluptas minima rerum eligendi architecto animi quas minus ratione deleniti non eaque maiores Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat consequuntur sapiente dolorem libero sunt suscipit deserunt nihil, repudiandae unde quia! Repellat natus ea unde! </p>
         </article>
     </main>
     
